# tokn

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
test/: test_training.py
tokn/: __init__.py
