[project]
name = "tokn"
version = "0.1.0"
description = "A simple BPE Tokenizer"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["tokn"]

[tool.pytest.ini_options]
minversion = "8.3.5"
testpaths = [
    "test"
]
